statum-macros/tests/ui/invalid_presentation_missing_parens.stderr
error: Error: `#[present(...)]` on state `WorkflowState::Draft` requires parentheses.
       Found: `#[present]`
       Expected: `#[present(label = "...", description = "...")]`
       Fix: write `#[present(...)]` with key/value pairs inside the parentheses.
  --> tests/ui/invalid_presentation_missing_parens.rs:15:5
   |
15 |     #[present]
   |     ^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_presentation_missing_parens.rs:17:2
   |
17 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_presentation_missing_parens.rs`
